--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -62,7 +62,7 @@ Mcu.Pin27=PB9
 Mcu.Pin28=VP_IWDG_VS_IWDG
 Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
@@ -255,14 +255,21 @@ SPI2.VirtualType=VM_MASTER
 USART1.BaudRate=2000000
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
-USB_DEVICE.VirtualMode=Hid
-USB_DEVICE.VirtualModeFS=Hid_FS
+USB_DEVICE.CLASS_NAME_FS=CUSTOMHID
+USB_DEVICE.INTERFACE_STRING_CUSTOMHID_FS=PS2 controller
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING,USBD_MAX_STR_DESC_SIZ,USBD_MAX_NUM_INTERFACES,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,PRODUCT_STRING_CUSTOMHID_FS,INTERFACE_STRING_CUSTOMHID_FS
+USB_DEVICE.MANUFACTURER_STRING=munia.io
+USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=MUSIA
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=32
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=32
+USB_DEVICE.USBD_MAX_NUM_INTERFACES=2
+USB_DEVICE.USBD_MAX_STR_DESC_SIZ=64
+USB_DEVICE.VirtualMode=CustomHid
+USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Mode=HID_FS
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=custom
