move cubemx stuff
Former-commit-id: 3cb210831515f12b74933a74e59d7975454bf936

--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -33,8 +33,7 @@ Mcu.IP4=SPI1
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
 Mcu.IP7=USART1
-Mcu.IP8=USB
-Mcu.IPNb=9
+Mcu.IPNb=8
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14OSC32_IN
@@ -50,16 +49,14 @@ Mcu.Pin17=PB15
 Mcu.Pin18=PA9
 Mcu.Pin19=PA10
 Mcu.Pin2=PA0
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PB3
-Mcu.Pin26=PF11
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_IWDG_VS_IWDG
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PA15
+Mcu.Pin23=PB3
+Mcu.Pin24=PF11
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_IWDG_VS_IWDG
+Mcu.Pin27=VP_SYS_VS_Systick
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -67,7 +64,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=30
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C4Tx
@@ -91,10 +88,6 @@ PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Mode=Device
-PA11.Signal=USB_DM
-PA12.Mode=Device
-PA12.Signal=USB_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
@@ -201,13 +194,13 @@ ProjectManager.ProjectFileName=MUSIA.ioc
 ProjectManager.ProjectName=MUSIA
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
-ProjectManager.TemplateDestinationPath=C\:\\Users\\Frank\\Desktop\\workspace\\munia\\MUSIA
+ProjectManager.TemplateDestinationPath=C\:\\Users\\Frank\\Desktop\\workspace\\munia\\firmware\\MUSIA\\CubeMX\\
 ProjectManager.TemplateSourcePath=C\:\\Program Files\\STMicroelectronics\\STM32Cube\\STM32CubeMX\\db\\extra_templates
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.UseDefaultDestinationPath=true
+ProjectManager.UseDefaultDestinationPath=false
 ProjectManager.UseDefaultSourcePath=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_SPI1_Init-SPI1-true-HAL-true,6-MX_SPI2_Init-SPI2-true-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_SPI1_Init-SPI1-true-HAL-true,6-MX_SPI2_Init-SPI2-true-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
