--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -1,25 +1,25 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI2_RX
-Dma.Request1=SPI1_RX
+Dma.Request0=SPI1_RX
+Dma.Request1=SPI2_RX
 Dma.RequestsNb=2
-Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.1.Instance=DMA1_Channel2
-Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.1.Mode=DMA_CIRCULAR
-Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.1.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.0.Instance=DMA1_Channel4
-Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.0.Mode=DMA_CIRCULAR
-Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.0.Instance=DMA1_Channel2
+Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.0.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.1.Instance=DMA1_Channel4
+Dma.SPI2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.1.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 IWDG.IPParameters=Prescaler
 IWDG.Prescaler=IWDG_PRESCALER_32
@@ -32,8 +32,9 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14OSC32_IN
@@ -57,6 +58,7 @@ Mcu.Pin24=PF11
 Mcu.Pin25=PB9
 Mcu.Pin26=VP_IWDG_VS_IWDG
 Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -64,7 +66,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C4Tx
@@ -77,6 +79,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 PA0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA0.GPIO_Label=JPS2_ATT
 PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
@@ -200,32 +203,32 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.UseDefaultDestinationPath=false
 ProjectManager.UseDefaultSourcePath=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_SPI1_Init-SPI1-true-HAL-true,6-MX_SPI2_Init-SPI2-true-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_SPI1_Init-SPI1-true-HAL-true,6-MX_SPI2_Init-SPI2-true-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM3_Init-TIM3-true-HAL-true
+RCC.AHBFreq_Value=48000000
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=48000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.FCLKCortexFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=32000000
+RCC.HCLKFreq_Value=48000000
 RCC.HSICECFreq_Value=32786.88524590164
-RCC.I2SFreq_Value=32000000
+RCC.I2SFreq_Value=48000000
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=32000000
-RCC.PLLCLKFreq_Value=32000000
-RCC.PLLMCOFreq_Value=32000000
-RCC.PLLMUL=RCC_PLL_MUL4
-RCC.SYSCLKFreq_VALUE=32000000
+RCC.MCOFreq_Value=48000000
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMCOFreq_Value=48000000
+RCC.PLLMUL=RCC_PLL_MUL6
+RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=32000000
-RCC.USART1Freq_Value=32000000
+RCC.TimSysFreq_Value=48000000
+RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=500.0 KBits/s
+SPI1.CalculateBaudRate=750.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.FirstBit=SPI_FIRSTBIT_LSB
@@ -235,18 +238,25 @@ SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_LOW
-SPI2.CalculateBaudRate=1000.0 KBits/s
+SPI2.CalculateBaudRate=1.5 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.FirstBit=SPI_FIRSTBIT_MSB
 SPI2.IPParameters=VirtualType,Mode,Direction,DataSize,FirstBit,CLKPolarity,CLKPhase,BaudRatePrescaler,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-USART1.BaudRate=2000000
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.CounterMode=TIM_COUNTERMODE_DOWN
+TIM3.IPParameters=Prescaler,CounterMode,Period,AutoReloadPreload
+TIM3.Period=1234
+TIM3.Prescaler=2000
+USART1.BaudRate=3000000
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
