--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -1,85 +1,50 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI2_RX
-Dma.RequestsNb=2
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.Instance=DMA1_Channel2
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_CIRCULAR
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.1.Instance=DMA1_Channel4
-Dma.SPI2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.1.Mode=DMA_CIRCULAR
-Dma.SPI2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.1.Priority=DMA_PRIORITY_HIGH
-Dma.SPI2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 IWDG.IPParameters=Prescaler
 IWDG.Prescaler=IWDG_PRESCALER_32
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=DMA
-Mcu.IP1=IWDG
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP0=IWDG
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14OSC32_IN
 Mcu.Pin1=PC15OSC32_OUT
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PB2
-Mcu.Pin13=PB10
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PA15
+Mcu.Pin17=PB3
+Mcu.Pin18=PF11
+Mcu.Pin19=PB9
 Mcu.Pin2=PA0
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PB3
-Mcu.Pin24=PF11
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_IWDG_VS_IWDG
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=VP_IWDG_VS_IWDG
+Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=29
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C4Tx
 MxCube.Version=4.26.0
 MxDb.Version=DB.4.0.260
-NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel4_5_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 PA0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA0.GPIO_Label=JPS2_ATT
 PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
@@ -111,24 +76,18 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LED3
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
+PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PB0.GPIO_Label=SW_CONSOLE_DISCONNECT
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB0.Locked=true
+PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=LED_ORANGE
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=SW_SNIFFER-CONSOLE
 PB12.Locked=true
@@ -137,10 +96,6 @@ PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=SW_PULLUP_ENABLE
 PB13.Locked=true
 PB13.Signal=GPIO_Output
-PB14.Mode=Full_Duplex_Master
-PB14.Signal=SPI2_MISO
-PB15.Mode=Full_Duplex_Master
-PB15.Signal=SPI2_MOSI
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=LED_GREEN
 PB2.Locked=true
@@ -149,9 +104,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=EE\#CS
 PB3.Locked=true
 PB3.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_Label
+PB9.GPIOParameters=PinState,GPIO_Label
 PB9.GPIO_Label=SW_SPI_CLK
 PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
 PC14OSC32_IN.GPIOParameters=GPIO_Label
 PC14OSC32_IN.GPIO_Label=USB_VIBR_EN
@@ -203,7 +159,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.UseDefaultDestinationPath=false
 ProjectManager.UseDefaultSourcePath=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_SPI1_Init-SPI1-true-HAL-true,6-MX_SPI2_Init-SPI2-true-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM3_Init-TIM3-true-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -225,31 +181,6 @@ RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
-SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=750.0 KBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.FirstBit=SPI_FIRSTBIT_LSB
-SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,FirstBit,CLKPolarity,CLKPhase,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI2.CLKPhase=SPI_PHASE_1EDGE
-SPI2.CLKPolarity=SPI_POLARITY_LOW
-SPI2.CalculateBaudRate=1.5 MBits/s
-SPI2.DataSize=SPI_DATASIZE_8BIT
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.FirstBit=SPI_FIRSTBIT_MSB
-SPI2.IPParameters=VirtualType,Mode,Direction,DataSize,FirstBit,CLKPolarity,CLKPhase,BaudRatePrescaler,CalculateBaudRate
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.CounterMode=TIM_COUNTERMODE_DOWN
-TIM3.IPParameters=Prescaler,CounterMode,Period,AutoReloadPreload
-TIM3.Period=1234
-TIM3.Prescaler=2000
 USART1.BaudRate=3000000
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -257,6 +188,4 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
