--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -8,33 +8,36 @@ Mcu.IP0=IWDG
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP4=TIM1
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14OSC32_IN
 Mcu.Pin1=PC15OSC32_OUT
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PB3
-Mcu.Pin18=PF11
-Mcu.Pin19=PB9
-Mcu.Pin2=PA0
-Mcu.Pin20=VP_IWDG_VS_IWDG
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB2
-Mcu.PinsNb=22
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PA15
+Mcu.Pin19=PF11
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_IWDG_VS_IWDG
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PB0
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C4Tx
@@ -45,6 +48,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true
 PA0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA0.GPIO_Label=JPS2_ATT
 PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
@@ -64,17 +68,20 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=EE\#CS
 PA15.Locked=true
 PA15.Signal=GPIO_Output
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=PinState,GPIO_Label
 PA2.GPIO_Label=LED1
 PA2.Locked=true
+PA2.PinState=GPIO_PIN_SET
 PA2.Signal=GPIO_Output
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=PinState,GPIO_Label
 PA3.GPIO_Label=LED2
 PA3.Locked=true
+PA3.PinState=GPIO_PIN_SET
 PA3.Signal=GPIO_Output
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=PinState,GPIO_Label
 PA4.GPIO_Label=LED3
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -100,10 +107,6 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=LED_GREEN
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=EE\#CS
-PB3.Locked=true
-PB3.Signal=GPIO_Output
 PB9.GPIOParameters=PinState,GPIO_Label
 PB9.GPIO_Label=SW_SPI_CLK
 PB9.Locked=true
@@ -125,6 +128,12 @@ PCC.Seq0=0
 PCC.Series=STM32F0
 PCC.Temperature=25
 PCC.Vdd=3.6
+PF0-OSC_IN.Locked=true
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Locked=true
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PF11.GPIOParameters=GPIO_Label
 PF11.GPIO_Label=BOOT0
 PF11.Locked=true
@@ -159,7 +168,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.UseDefaultDestinationPath=false
 ProjectManager.UseDefaultSourcePath=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -181,6 +190,10 @@ RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM1.Period=100
+TIM1.Prescaler=48000
 USART1.BaudRate=3000000
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -188,4 +201,6 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
