--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -13,31 +13,36 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC14OSC32_IN
-Mcu.Pin1=PC15OSC32_OUT
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB12
-Mcu.Pin13=PB13
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PA15
-Mcu.Pin19=PF11
-Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_IWDG_VS_IWDG
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin4=PA0
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PB0
-Mcu.PinsNb=24
+Mcu.Pin0=PC15OSC32_OUT
+Mcu.Pin1=PF0-OSC_IN
+Mcu.Pin10=PB2
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PA15
+Mcu.Pin18=PB3
+Mcu.Pin19=PB4
+Mcu.Pin2=PF1-OSC_OUT
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PF11
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_IWDG_VS_IWDG
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin3=PA0
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C4Tx
@@ -107,15 +112,47 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=LED_GREEN
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB3.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB3.GPIO_Label=LCD_D7
+PB3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB3.Locked=true
+PB3.PinState=GPIO_PIN_RESET
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB4.GPIO_Label=LCD_D6
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB4.Locked=true
+PB4.PinState=GPIO_PIN_RESET
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB5.GPIO_Label=LCD_D5
+PB5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB5.Locked=true
+PB5.PinState=GPIO_PIN_RESET
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB6.GPIO_Label=LCD_D4
+PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB6.Locked=true
+PB6.PinState=GPIO_PIN_RESET
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB7.GPIO_Label=LCD_E
+PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB7.Locked=true
+PB7.PinState=GPIO_PIN_RESET
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB8.GPIO_Label=LCD_RS
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB8.Locked=true
+PB8.PinState=GPIO_PIN_RESET
+PB8.Signal=GPIO_Output
 PB9.GPIOParameters=PinState,GPIO_Label
 PB9.GPIO_Label=SW_SPI_CLK
 PB9.Locked=true
 PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
-PC14OSC32_IN.GPIOParameters=GPIO_Label
-PC14OSC32_IN.GPIO_Label=USB_VIBR_EN
-PC14OSC32_IN.Locked=true
-PC14OSC32_IN.Signal=GPIO_Output
 PC15OSC32_OUT.GPIOParameters=GPIO_Label
 PC15OSC32_OUT.GPIO_Label=PS2_VIBR_EN
 PC15OSC32_OUT.Locked=true
