--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -13,36 +13,37 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC15OSC32_OUT
-Mcu.Pin1=PF0-OSC_IN
-Mcu.Pin10=PB2
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PA15
-Mcu.Pin18=PB3
-Mcu.Pin19=PB4
-Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PB5
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=PF11
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_IWDG_VS_IWDG
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin3=PA0
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=29
+Mcu.Pin0=PC14OSC32_IN
+Mcu.Pin1=PC15OSC32_OUT
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PA15
+Mcu.Pin19=PB3
+Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=PF11
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_IWDG_VS_IWDG
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PB0
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C4Tx
@@ -153,6 +154,14 @@ PB9.GPIO_Label=SW_SPI_CLK
 PB9.Locked=true
 PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
+PC14OSC32_IN.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC14OSC32_IN.GPIO_Label=LCD_PWM
+PC14OSC32_IN.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC14OSC32_IN.GPIO_PuPd=GPIO_PULLUP
+PC14OSC32_IN.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC14OSC32_IN.Locked=true
+PC14OSC32_IN.PinState=GPIO_PIN_SET
+PC14OSC32_IN.Signal=GPIO_Output
 PC15OSC32_OUT.GPIOParameters=GPIO_Label
 PC15OSC32_OUT.GPIO_Label=PS2_VIBR_EN
 PC15OSC32_OUT.Locked=true
