--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -180,8 +180,9 @@ PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Locked=true
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
-PF11.GPIOParameters=GPIO_Label
-PF11.GPIO_Label=BOOT0
+PF11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PF11.GPIO_Label=MENU
+PF11.GPIO_PuPd=GPIO_PULLDOWN
 PF11.Locked=true
 PF11.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
