--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -13,37 +13,38 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC14OSC32_IN
-Mcu.Pin1=PC15OSC32_OUT
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB12
-Mcu.Pin13=PB13
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PA15
-Mcu.Pin19=PB3
-Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PB4
-Mcu.Pin21=PB5
-Mcu.Pin22=PB6
-Mcu.Pin23=PB7
-Mcu.Pin24=PF11
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_IWDG_VS_IWDG
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin4=PA0
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PB0
-Mcu.PinsNb=30
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14OSC32_IN
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
+Mcu.Pin2=PC15OSC32_OUT
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=PF11
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_IWDG_VS_IWDG
+Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin3=PF0-OSC_IN
+Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin4=PF1-OSC_OUT
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C4Tx
@@ -154,6 +155,10 @@ PB9.GPIO_Label=SW_SPI_CLK
 PB9.Locked=true
 PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=MENU_ALT
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PC14OSC32_IN.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC14OSC32_IN.GPIO_Label=LCD_PWM
 PC14OSC32_IN.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -182,7 +187,7 @@ PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PF11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF11.GPIO_Label=MENU
-PF11.GPIO_PuPd=GPIO_PULLDOWN
+PF11.GPIO_PuPd=GPIO_NOPULL
 PF11.Locked=true
 PF11.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
