lcd backlight for menu

--- a/firmware/MUSIA/MUSIA.ioc
+++ b/firmware/MUSIA/MUSIA.ioc
@@ -165,7 +165,7 @@ PC14OSC32_IN.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PC14OSC32_IN.GPIO_PuPd=GPIO_PULLUP
 PC14OSC32_IN.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC14OSC32_IN.Locked=true
-PC14OSC32_IN.PinState=GPIO_PIN_SET
+PC14OSC32_IN.PinState=GPIO_PIN_RESET
 PC14OSC32_IN.Signal=GPIO_Output
 PC15OSC32_OUT.GPIOParameters=GPIO_Label
 PC15OSC32_OUT.GPIO_Label=PS2_VIBR_EN
